muda o projeto para cotação da bolsa

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,16 +1,2 @@
-<ul>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>
-  <li>teste</li>    
-</ul>
 
-<app-g-component></app-g-component>
+<app-teste></app-teste>
