--- a/src/app/components/teste/teste.html
+++ b/src/app/components/teste/teste.html
@@ -18,7 +18,7 @@
                     
             </mat-card-content>
             <mat-card-footer class="card-footer">
-            <button matButton="filled" (click)="getData()">Consultar</button>
+            <button matButton="filled" (click)="getData()">Verificar</button>
             </mat-card-footer>
         </mat-card>
         
