--- a/src/app/components/teste/teste.scss
+++ b/src/app/components/teste/teste.scss
@@ -4,7 +4,7 @@
     margin: 0 auto;
     margin-top: 20px;
     padding: 20px;
-    background-color: rgb(255, 146, 146);
-    color: white;
+    background-color: orange;
+    color: black;
     border: none;
 }
