--- a/src/app/components/petrobras/petrobras.html
+++ b/src/app/components/petrobras/petrobras.html
@@ -1,1 +1,7 @@
-<p>petrobras works!</p>
+<div class="cotacao">
+  @if (petro) {
+    @for (result of petro.results; track $index) {
+      <app-card-cotation [requestedAT]="petro.requestedAT" [result]="result"></app-card-cotation>
+    }
+  }
+</div>
