--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,17 @@
-
+<h1 style="color: white; text-align: center;">Cotações das Bolsas de Valores!</h1>
+<hr>
+<p style="color: white; text-align: center;font-size: 20px;">Abaixo podemos consultar algumas:</p>
+<hr>
+<p style="color: white; text-align: center;font-size: 20px;">Itaú</p>
 <app-itau></app-itau>
 <hr>
+<p style="color: white; text-align: center;font-size: 20px;">Petrobras - Magalu</p>
 <app-petrobras></app-petrobras>
 <hr>
+<p style="color: white; text-align: center;font-size: 20px;">Vale</p>
 <app-vale></app-vale>
 <hr>
+<p style="color: white; text-align: center;font-size: 20px;">AAPL</p>
 <app-aapl></app-aapl>
+<hr>
+<body style="background-color: rgb(14, 1, 70);"></body>
