--- a/src/app/shared/card-cotation/card-cotation.scss
+++ b/src/app/shared/card-cotation/card-cotation.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   margin-top: 20px;
   padding: 20px;
-  background-color: orange;
-  color: black;
+  background-color: rgb(204, 36, 7);
+  color: white;
   border: none;
 }
