--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,14 @@
-<h1 style="color: white; text-align: center;">Cotações das Bolsas de Valores!</h1>
-<hr>
-<p style="color: white; text-align: center;font-size: 20px;">Abaixo podemos consultar algumas:</p>
-<hr>
+<h1 style="color: white; text-align: center; font-weight: bold; background-color: #696969; padding: 50px 0; margin: 0;">Cotações das Bolsas de Valores!</h1>
+
+<p style="color: red; text-align: center;font-size: 20px; font-weight: bold; background-color: #ffffff; padding: 10px 0; margin: 0;">Abaixo podemos consultar algumas:</p>
+
 <p style="color: white; text-align: center;font-size: 20px;">Itaú</p>
 <app-itau></app-itau>
 <hr>
 <p style="color: white; text-align: center;font-size: 20px;">Petrobras - Magalu</p>
 <app-petrobras></app-petrobras>
 <hr>
-<p style="color: white; text-align: center;font-size: 20px;">Vale</p>
+<p style="ncolor: white; text-align: center;font-size: 20px;">Vale</p>
 <app-vale></app-vale>
 <hr>
 <p style="color: white; text-align: center;font-size: 20px;">AAPL</p>
