--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,21 @@
-<h1 style="color: white; text-align: center; font-weight: bold; background-color: #696969; padding: 50px 0; margin: 0;">Cotações das Bolsas de Valores!</h1>
+<h1 style="color: white; text-align: center; font-weight: bold; background-color: #660000; padding: 50px 0; margin: 0;">Cotações das Bolsas de Valores!</h1>
 
 <p style="color: red; text-align: center;font-size: 20px; font-weight: bold; background-color: #ffffff; padding: 10px 0; margin: 0;">Abaixo podemos consultar algumas:</p>
 
-<p style="color: white; text-align: center;font-size: 20px;">Itaú</p>
+<p style="color: white; text-align: center;font-size: 20px; background-color: #252525; padding: 10px 0; margin: 0;">Itaú</p>
 <app-itau></app-itau>
-<hr>
-<p style="color: white; text-align: center;font-size: 20px;">Petrobras - Magalu</p>
+<br>
+<p style="color: white; text-align: center;font-size: 20px; background-color: #252525; padding: 10px 0; margin: 0;">Petrobras - Magalu</p>
 <app-petrobras></app-petrobras>
-<hr>
-<p style="ncolor: white; text-align: center;font-size: 20px;">Vale</p>
+<br>
+<p style="color: white; text-align: center;font-size: 20px; background-color: #252525; padding: 10px 0; margin: 0;">Vale</p>
 <app-vale></app-vale>
-<hr>
-<p style="color: white; text-align: center;font-size: 20px;">AAPL</p>
+<br>
+<p style="color: white; text-align: center;font-size: 20px; background-color: #252525; padding: 10px 0; margin: 0;">AAPL</p>
 <app-aapl></app-aapl>
-<hr>
-<body style="background-color: rgb(14, 1, 70);"></body>
+
+<br>
+
+<p style="color: white; text-align: center;font-size: 20px; background-color: #000000; padding: 10px 0; margin: 0; "></p>
+<br>
+<body style="background-color: rgb(1, 54, 70);"></body>
