--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,21 +1,19 @@
 <h1 style="color: white; text-align: center; font-weight: bold; background-color: #660000; padding: 50px 0; margin: 0;">Cotações das Bolsas de Valores!</h1>
 
-<p style="color: red; text-align: center;font-size: 20px; font-weight: bold; background-color: #ffffff; padding: 10px 0; margin: 0;">Abaixo podemos consultar algumas:</p>
+<p class="titulo" >Abaixo podemos consultar algumas:</p>
 
-<p style="color: white; text-align: center;font-size: 20px; background-color: #252525; padding: 10px 0; margin: 0;">Itaú</p>
+<p class="subtitulo"   >Itaú</p>
 <app-itau></app-itau>
 <br>
-<p style="color: white; text-align: center;font-size: 20px; background-color: #252525; padding: 10px 0; margin: 0;">Petrobras - Magalu</p>
+<p class="subtitulo"  >Petrobras - Magalu</p>
 <app-petrobras></app-petrobras>
 <br>
-<p style="color: white; text-align: center;font-size: 20px; background-color: #252525; padding: 10px 0; margin: 0;">Vale</p>
+<p class="subtitulo" >Vale</p>
 <app-vale></app-vale>
 <br>
-<p style="color: white; text-align: center;font-size: 20px; background-color: #252525; padding: 10px 0; margin: 0;">AAPL</p>
+<p class="subtitulo" >AAPL</p>
 <app-aapl></app-aapl>
-
 <br>
-
-<p style="color: white; text-align: center;font-size: 20px; background-color: #000000; padding: 10px 0; margin: 0; "></p>
+<p class="subtitulo" ></p>
 <br>
 <body style="background-color: rgb(1, 54, 70);"></body>
