--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <h1 style="color: white; text-align: center; font-weight: bold; background-color: #660000; padding: 50px 0; margin: 0;">Cotações das Bolsas de Valores!</h1>
-<p class="titulo" style="">Abaixo podemos consultar algumas:</p>
-<p class="subtitulo" style="">Itaú</p>
+<p class="titulo">Abaixo podemos consultar algumas:</p>
+<p class="subtitulo">Itaú</p>
 <app-itau></app-itau>
 <p class="subtitulo">Petrobras - Magalu</p>
 <app-petrobras></app-petrobras>
