refactory - update css

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,3 +8,10 @@
 <app-vale></app-vale>
 <p class="subtitulo">AAPL</p>
 <app-aapl></app-aapl>
+
+<!--<div class="display">-->
+<!--  <div class="card"></div>-->
+<!--  <div class="card"></div>-->
+<!--  <div class="card"></div>-->
+<!--  <div class="card"></div>-->
+<!--</div>-->
