--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,3 +36,10 @@ body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cotacao {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
