--- a/src/app/components/aapl/aapl.html
+++ b/src/app/components/aapl/aapl.html
@@ -1,4 +1,4 @@
-<div class="cotacao">
+<div class="appl">
   @if (aapl) {
     @for (result of aapl.results; track $index) {
       <app-card-cotation [requestedAT]="aapl.requestedAT" [result]="result"></app-card-cotation>
