--- a/src/app/components/vale/vale.html
+++ b/src/app/components/vale/vale.html
@@ -1,4 +1,4 @@
-<div class="cotacao">
+<div class="vale">
   @if (vale) {
     @for (result of vale.results; track $index) {
       <app-card-cotation [requestedAT]="vale.requestedAT" [result]="result"></app-card-cotation>
