--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,17 +1,17 @@
-<h1 style="color: white; text-align: center; font-weight: bold; background-color: #660000; padding: 50px 0; margin: 0;">Cotações das Bolsas de Valores!</h1>
-<p class="titulo">Abaixo podemos consultar algumas:</p>
-<p class="subtitulo">Itaú</p>
+<h1 class="titulo" >Cotações das Bolsas de Valores!</h1>
+<p class="paragrafo">Abaixo podemos consultar algumas:</p>
+<p class="topo">Itaú</p>
 <app-itau></app-itau>
-<p class="subtitulo">Petrobras - Magalu</p>
+<p class="topo">Petrobras - Magalu</p>
 <app-petrobras></app-petrobras>
-<p class="subtitulo">Vale</p>
+<p class="topo">Vale</p>
 <app-vale></app-vale>
-<p class="subtitulo">AAPL</p>
+<p class="topo">AAPL</p>
 <app-aapl></app-aapl>
-
-<!--<div class="display">-->
-<!--  <div class="card"></div>-->
-<!--  <div class="card"></div>-->
-<!--  <div class="card"></div>-->
-<!--  <div class="card"></div>-->
-<!--</div>-->
+<footer class="rodape">Você chegou ao fim da página!</footer>
+<div class="display">
+  <div class="card"></div>
+  <div class="card"></div>
+  <div class="card"></div>
+  <div class="card"></div>
+</div>
