--- a/src/app/shared/card-cotation/card-cotation.scss
+++ b/src/app/shared/card-cotation/card-cotation.scss
@@ -1,9 +1,11 @@
 .card {
-  width: 300px;
+  width: 500px;
   margin: 0 auto;
   margin-top: 20px;
   padding: 20px;
-  background-color: rgb(204, 36, 7);
+  background-color: black;
   color: white;
-  border: none;
+  border: 2px solid white;
+  text-align: center;
+  box-shadow: 5px 5px 5px red;
 }
